--- a/_posts/2016-04-19-New-Post.markdown
+++ b/_posts/2016-04-19-New-Post.markdown
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      New Post
-author:     Ahmet Cecen
+author:     Mikhail Gasanov
 tags: 		post template
 subtitle:  	Some Short Description of Post
 category:  project1
